# DepthFromMovement

./: README.md  configuration.env  features.example.json  pyproject.toml  requirements.txt
data/: __init__.py  camera_calibration.py  dataset.py  descriptor_map_json.py  feature_matching_json.py  fusion_json.py  gt_io.py  io_json.py  motion_frames.py  schema.py  tf_static_io.py
pipeline/: __init__.py  config.py  descriptor_landmark_map.py  features.py  frame_axes.py  fusion.py  geometry.py  map.py  matching.py  metrics.py  range_gate.py  triangulation.py  triangulation_debug.py
pipeline/metric_fusion/: __init__.py  base.py  combine.py  ekf_pose_velocity.py
ros2_ws/: configuration.env.example  run_incremental_vo.ps1
ros2_ws/src/incremental_vo_ros2/: package.xml  requirements.txt  setup.cfg  setup.py
ros2_ws/src/incremental_vo_ros2/incremental_vo_ros2/: camera_axes.py  frame_axes.py  frame_transform_debug.py  image_buffer.py  incremental_vo_node.py  keyframe_markers.py  odom_history.py  offline_dataset.py  param_config.py  range_gate.py  se3.py  support.py
ros2_ws/src/map_3d_ros2/: package.xml  setup.cfg  setup.py
ros2_ws/src/map_3d_ros2/map_3d_ros2/: __init__.py  image_buffer.py  map_3d_node.py  param_config.py  range_gate.py  ros_support.py
ros2_ws/src/map_3d_ros2/map_3d_ros2.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: init_test_dataset_motion.py
tests/: conftest.py  test_bag_replay_reset.py  test_camera_axes_swap.py  test_camera_calibration.py  test_camera_drone_world_transform.py  test_canonicalize_world_T_camera.py  test_dataset.py  test_depth_projection.py  test_descriptor_landmark_map.py  test_ekf_pose_velocity.py  test_epipolar_report.py  test_export_steps.py  test_frame_axes.py  test_frame_features_cache.py  test_fusion.py  test_io_json.py  test_keyframe_markers.py  test_map_depth_scale.py  test_map_motion_pose.py  test_map_range_gate.py  test_map_triangulation_motion.py  test_match_classification.py  test_metric_fusion.py  test_motion_epipolar_inliers.py  test_motion_frame_reframe.py  test_odom_history.py  test_offline_dataset_export.py  test_pose_delta_export.py  test_pose_delta_metric_world.py  test_ros_frame_transform_log.py  test_ros_image_buffer.py  test_ros_odom_history.py  test_ros_param_config.py  test_ros_sparse_range.py  test_ros_tf_compose.py  test_triangulation_cheiral.py  test_triangulation_debug.py  test_vision_odom_translation_scale.py
viz/: __init__.py  descriptor_map_cli.py  descriptor_map_runner.py  epipolar_report.py  match_classification.py  overlays.py  pdf_util.py  pose_delta.py  recorder.py  step_runner.py  step_runner_cli.py
