[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "depth-from-movement"
version = "0.1.0"
description = "Feature-based incremental depth / structure from motion with metric motion"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "opencv-python>=4.8",
    "scipy>=1.11",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[project.scripts]
dfm-export-steps = "viz.step_runner_cli:main"

[tool.hatch.build.targets.wheel]
packages = ["data", "pipeline", "viz"]
